--- a/server/src/main/resources/templates/verification-code-email.html
+++ b/server/src/main/resources/templates/verification-code-email.html
@@ -1,4 +1,4 @@
-<p>Hi, {{username}}</p>
+<p>Hi, {{givenName}}</p>
 <p>Your verification code is:</p>
 <h2 style="color:#4CAF50;">{{verificationCode}}</h2>
 <p>This code will expire in {{expirationTime}} minutes.</p>
