--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.ant-radio-button-wrapper:not(:first-child)::before {
+    display: none !important;
+}
+
